<resources>
    <string name="app_name">MyMusicPlayer</string>


    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>


    <string name="action_play">play</string>
    <string name="action_next">next</string>
    <string name="no_network">无网络连接</string>

    <string name="context_menu">menu</string>

    <string name="action_title">我的爱人</string>
    <string name="action_sub_title">陈小春</string>

    <string name="music_local">本地音乐</string>
    <string name="music_recent">最近播放</string>
    <string name="music_dld">下载管理</string>
    <string name="music_artist">我的歌手</string>
    <string name="music_dj">我的电台</string>
    <string name="music_mv">我的MV</string>

    <string-array name="music_guide_arr">
        <item>本地音乐</item>
        <item>最近播放</item>
        <item>下载管理</item>
        <item>我的歌手</item>
        <item>我的电台</item>
        <item>我的MV</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_local_music">LocalMusicActivity</string>

    <string-array name="local_music_titles">
        <item>单曲</item>
        <item>歌手</item>
        <item>专辑</item>
        <item>文件夹</item>
    </string-array>
    <string name="title_activity_local_artist_music">LocalArtistMusicActivity</string>

    <!--menu-->
    <string name="scan_music">扫描歌曲</string>
    <string name="manage_music">歌曲管理</string>
    <string name="sort_style">排序方式</string>
    <string name="get_web_img">一键获取封面歌词</string>
    <string name="setting">设置</string>
    <string name="exit_app">退出应用</string>

    <string name="user_name">berserker_tdl</string>

    <string-array name="list_item_key">
        <item>menu_item_icon</item>
        <item>menu_item_title</item>
    </string-array>

    <string-array name="drawer_menus">
        <item>我的消息</item>
        <item>我的等级</item>
        <item>积分商城</item>
        <item>我的音乐云盘</item>
        <item>听歌识曲</item>
        <item>定时停止播放</item>
        <item>设置</item>
        <item>退出应用</item>
    </string-array>


</resources>
